# arm-control-dreamteam

./: .gitignore  ExerciseQuestions.md  Instructions.md  adv_rob_Workspace.code-workspace  dreamteamtuning.perspective  plotjuggler.xml  plotjuggler_gravity.xml  plotjuggler_inversdynamics.xml  plotjuggler_jointlimits.xml  plotjuggler_visualservo.xml  rqt_multiplot.xml
arm_controllers/: CMakeLists.txt  TableAvoidController.perspective  TableAvoidWholeController.perspective  controller_plugins.xml  dreamteamtuning.perspective  gravityController.perspective  gravityController_PBVS.perspective  inverseDynamicsControl.perspective  kinematicControl.perspective  obsAvoidController.perspective  package.xml  pointAvoidController.perspective  pointAvoidController.rviz  rqt_multiplot_pointstracker.xml  rviz_table.rviz  table_as_pointcloud.py  velocityController.perspective
arm_controllers/cfg/: obsavoidControllerParams.cfg
arm_controllers/msg/: ControllerJointState.msg  VisualServoMsg.msg
arm_controllers/src/: computed_torque_controller.cpp  gravityPD_controller.cpp  gravityPD_controller_visualservo.cpp  gravityPD_controller_visualservo_ib.cpp  inverse_dynamics_task_space.cpp  kinematic_controller.cpp  obsavoid_controller.cpp  pointavoid_controller.cpp  table_avoid_controller.cpp  table_avoid_whole_controller.cpp  velocity_controller.cpp
aruco_hand_eye/launch/: aruco_hand_eye.launch  aruco_hand_eye_elfin.launch
elfin/elfin_gazebo/: package.xml
elfin/elfin_launch/: rviz_table.rviz  (+2 more)
elfin/elfin_markers/: CMakeLists.txt  package.xml
elfin_tf/: CMakeLists.txt  package.xml
(+43 files in other folders)
