<?xml version="1.0"?>
<package format="2">
  <name>elfin_markers</name>
  <version>0.0.0</version>
  <description>The elfin_markers package</description>
  <maintainer email="nicolas.trimborn@tuni.fi">nicolas trimborn</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
